# contrast

./: .gitignore  Cargo.toml  README.md
analyse_besoins/: rapport.tex
bench/: Cargo.toml
bench/src/: lib.rs  main.rs
contrast/: Cargo.toml
contrast-properties/: Cargo.toml
contrast-properties/src/: color.rs  size.rs
contrast-renderer/: Cargo.toml
contrast-renderer/bench/: Cargo.toml
contrast-renderer/bench/src/: lib.rs  main.rs
contrast-renderer/examples/01-Hello-world!/: Cargo.toml
contrast-renderer/examples/01-Hello-world!/src/: main.rs
contrast-renderer/examples/02-More-shapes/: Cargo.toml
contrast-renderer/examples/02-More-shapes/src/: main.rs
contrast-renderer/examples/03-We-need-lines/: Cargo.toml
contrast-renderer/examples/03-We-need-lines/src/: main.rs
contrast-renderer/examples/04-Polygons-now/: Cargo.toml
contrast-renderer/examples/04-Polygons-now/src/: main.rs
contrast-renderer/examples/05-Let-me-write-that-down/src/: main.rs
contrast-renderer/examples/06-That-keyboard-is-not-useless/src/: main.rs
contrast-renderer/examples/07-Its moving!/: Cargo.toml
contrast-renderer/examples/07-Its moving!/src/: main.rs
contrast-renderer/examples/08-Hello-layers/: Cargo.toml
contrast-renderer/examples/08-Hello-layers/src/: main.rs
contrast-renderer/examples/09-A lot of marks/: Cargo.toml
contrast-renderer/examples/09-A lot of marks/src/: main.rs
contrast-renderer/examples/10-Scatterplot/: data
contrast-renderer/examples/10-Scatterplot/src/: main.rs
contrast-renderer/examples/A lot of marks/: Cargo.toml
contrast-renderer/examples/A lot of marks/src/: main.rs
contrast-renderer/examples/Its moving!/: Cargo.toml
contrast-renderer/examples/Its moving!/src/: main.rs
contrast-renderer/examples/Let-me-write-that-down/: Cargo.toml
contrast-renderer/examples/Let-me-write-that-down/src/: main.rs
contrast-renderer/examples/Scatterplot/: Cargo.toml
contrast-renderer/examples/Scatterplot/src/: main.rs
contrast-renderer/examples/That-keyboard-is-not-useless/: Cargo.toml
contrast-renderer/examples/That-keyboard-is-not-useless/src/: main.rs
contrast-renderer/src/: lib.rs  main.rs
contrast/mark_macro_derive/: Cargo.toml
contrast/mark_macro_derive/src/: lib.rs
contrast/properties/src/: color.rs  lib.rs  markid.rs  markproperties.rs  position.rs  rotation.rs
contrast/src/: camera.rs  layer.rs  lib.rs  main.rs  markproperties.rs  markscontainer.rs
contrast/src/marks/: linemark.rs  mark.rs  pointmark.rs  polygonmark.rs  textmark.rs
contrast/src/shaders/line/: line.frag  line.geom  line.vert
contrast/src/shaders/point/: point.frag  (+1 more)
doc/analyse_besoins/: Makefile  bibli.bib
doc/memoire/: Makefile  bibli.bib  memoire.tex
lumi_renderer/: Cargo.toml
lumi_renderer/src/: lib.rs  main.rs
mark_macro_derive/: Cargo.toml
mark_macro_derive/src/: lib.rs
properties/: Cargo.toml
properties/src/: color.rs  lib.rs  markid.rs  position.rs  size.rs
src/: camera.rs  layer.rs  lib.rs  linemark.rs  main.rs  mark.rs  markproperties.rs  markscontainer.rs  old_main.rs  pointmark.rs  polygonmark.rs  properties.rs
src/marks/: linemark.rs  mark.rs  mod.rs  pointmark.rs  polygonmark.rs  textmark.rs
src/properties/: color.rs  markproperties.rs  mod.rs  position.rs  size.rs
src/shaders/: fs.glsl  line.frag  line.geom  line.vert  mark-fs.glsl  mark-gs.glsl  mark-vs.glsl  point.frag  point.fragment  point.geom  point.vert  point.vertex  text.frag  vs.glsl
src/shaders/point/: point.vert
src/shaders/polygon/: polygon.frag  polygon.vert
src/shaders/prototype/: copy.frag  copy.vert  marks.frag  marks.geom  marks.vert
src/shaders/text/: text.vert
(+3 files in other folders)
