[package]
name = "contrast-renderer"
version = "0.1.0"
authors = ["Lorian Corbel <lorian.corbel@etu.u-bordeaux.fr>, Camille Meyrignac <camille.meyrignac@etu.u-bordeaux.fr>, Maxime Pacaud <maxime.pacaud@etu.u-bordeaux.fr>, Nicolas Sentout <nicolas.sentout@etu.u-bordeaux.fr>"]
edition = "2018"

[dependencies]
luminance = "0.30.1"
luminance-glfw = "0.5.4"
luminance-windowing = "0.2.4"
rand = "0.4"   #todo: enlever
contrast = { path = "../contrast/" }