[package]
name = "mark_macro_derive"
version = "0.1.0"
authors = ["Lorian Corbel <lorian.corbel@etu.u-bordeaux.fr>, Camille Meyrignac <camille.meyrignac@etu.u-bordeaux.fr>, Maxime Pacaud <maxime.pacaud@etu.u-bordeaux.fr>, Nicolas Sentout <nicolas.sentout@etu.u-bordeaux.fr>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.14.4" # parses Rust code from a string into a data structure that we can perform operations on
quote = "0.6.3" # takes syn data structures and turns them back into Rust code
contrast-properties = { path = "../../contrast-properties" }